# bullet_software

./: README.md
bullet_core/: CMakeLists.txt  package.xml
bullet_core/include/bullet_core/: bullet_core.hpp
bullet_description/: CMakeLists.txt  TODO  package.xml
bullet_description/launch/: display_rviz.launch  load_description.launch
bullet_description/meshes/: base_link.STL  electronics_link.STL  leg_1_absorber_link.STL  leg_1_arm_link.STL  leg_1_foot_link.STL  leg_1_forearm_link.STL  leg_1_forearm_servo_link.STL  leg_2_absorber_link.STL  leg_2_arm_link.STL  leg_2_foot_link.STL  leg_2_forearm_link.STL  leg_2_forearm_servo_link.STL  leg_3_absorber_link.STL  leg_3_arm_link.STL  leg_3_foot_link.STL  leg_3_foream_link.STL  leg_4_absorber_link.STL  leg_4_arm_link.STL  leg_4_foot_link.STL  leg_4_forearm_link.STL  leg_4_forearm_servo_link.STL  leg_5_absorber_link.STL  leg_5_arm_link.STL  leg_5_foot_link.STL  leg_5_forearm_link.STL  leg_6_absorber_link.STL  leg_6_antislipper_link.STL  leg_6_arm_link.STL  leg_6_foot_link.STL  leg_6_forearm_link.STL  plug_link.STL  sensors_link.STL
bullet_description/rviz/: urdf.rviz
bullet_description/urdf/: bullet.urdf
bullet_driver/: CMakeLists.txt  package.xml
bullet_driver/include/bullet_driver/: bullet_datatypes.h  bullet_robot.h  bullet_spi.h  imu.h
bullet_driver/launch/: bullet_driver.launch
bullet_driver/scripts/: start.sh
bullet_driver/src/: bullet_robot.cpp  bullet_spi.cpp  imu.cpp  main_bullet_driver.cpp  main_configure_servo.cpp  main_configure_servo_id_br.cpp  main_connect_to_servo.cpp  main_reset.cpp
bullet_gait/: CMakeLists.txt  package.xml
bullet_gait/config/: bullet_gait.yaml
bullet_gait/include/bullet_gait/: gait_generator.h  gait_generator_simple.h
bullet_gait/launch/: bullet_gait.launch
bullet_gait/src/: gait_generator.cpp  gait_generator_simple.cpp  main_gait.cpp
bullet_kinematics/: CMakeLists.txt  package.xml
bullet_kinematics/config/: kinematics.yaml
bullet_kinematics/include/bullet_kinematics/: kinematics_services.h  leg_solver_analitical.h  leg_solver_kdl.h  solver.h
bullet_kinematics/launch/: bullet_kinematics.launch
bullet_kinematics/msg/: LegPosition.msg  RobotPose.msg
bullet_kinematics/scripts/: gazebo_adapter.py
bullet_kinematics/src/: kinematics_services.cpp  leg_solver_analitical.cpp  leg_solver_kdl.cpp  main_kinematics_solver.cpp  solver.cpp
bullet_kinematics/srv/: ConvertPointFrame.srv  SolveFwd.srv
bullet_simulator/: CMakeLists.txt  package.xml
bullet_simulator/config/: position_controller.yaml
bullet_simulator/launch/: bullet_simulator.launch  control.launch  spawn.launch  world.launch
bullet_simulator/plugins/: CMakeLists.txt  hello_world.cc  model_push.cc
bullet_simulator/src/: main_bullet_kinematics_translator.cpp  main_pid_test.cpp
bullet_simulator/worlds/: bullet.world
bullet_software/: CMakeLists.txt  package.xml
bullet_teleop/: CMakeLists.txt  package.xml
bullet_teleop/config/: bullet_teleop.yaml
bullet_teleop/launch/: bullet_teleop.launch
bullet_teleop/scripts/: bullet_teleop.py
