<?xml version="1.0"?>
<package>
  <name>bullet_core</name>
  <version>0.0.0</version>
  <description>The bullet_core package</description>

  <author email="szlendak.jakub@gmail.com">Jakub Szlendak</author>
  <author email="daniel.koguciuk@gmail.com">Daniel Koguciuk</author>
  <maintainer email="daniel.koguciuk@gmail.com">Daniel Koguciuk</maintainer>

  <license>BSD</license>
  <url type="website">http://wutrobotics.mchtr.pw.edu.pl</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>

</package>
