<?xml version="1.0"?>
<package>
  <name>bullet_driver</name>
  <version>0.0.0</version>
  <description>The bullet_driver package</description>

  <author email="daniel.koguciuk@gmail.com">Daniel Koguciuk</author>
  <maintainer email="daniel.koguciuk@gmail.com">Daniel Koguciuk</maintainer>

  <license>BSD</license>
  <url type="website">http://wutrobotics.mchtr.pw.edu.pl</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>

</package>
