<?xml version="1.0"?>
<package>
  <name>bullet_kinematics</name>
  <version>0.0.0</version>
  <description>The bullet_pc package</description>

  <author email="szlendak.jakub@gmail.com">Jakub Szlendak</author>
  <author email="daniel.koguciuk@gmail.com">Daniel Koguciuk</author>
  <maintainer email="daniel.koguciuk@gmail.com">Daniel Koguciuk</maintainer>

  <license>BSD</license>
  <url type="website">http://wutrobotics.mchtr.pw.edu.pl</url>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>bullet_core</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>bullet_core</run_depend>

  <export>
  </export>

</package>
