<?xml version="1.0"?>
<package>
	<name>bullet_software</name>
	<version>0.0.0</version>
	<description>Buller robot metapackage for rpi</description>
	<maintainer email="daniel.koguciuk@gmail.com">daniel</maintainer>
	<license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>
	<export>
		<metapackage/>
	</export>
</package>
